frontend/core/src/main/webapp/static/less/widgets.less
/* ... */
.omnibar-drawer {
  position: absolute;
  right: 0;
  width: 100%;
  max-width: @one-column-grid-width;
}

.omnibar-animation.ng-enter, .omnibar-animation.ng-leave {
  position: absolute;
  left: 0;
  right: 0;
}

.omnibar-animation.ng-enter {
  -webkit-animation: .3s fade-in;
  -moz-animation: .3s fade-in;
  -o-animation: .3s fade-in;
  animation: .3s fade-in;
}

.omnibar-animation.ng-leave {
  -webkit-animation: .3s fade-out;
  -moz-animation: .3s fade-out;
  -o-animation: .3s fade-out;
  animation: .3s fade-out;
}

/* # MENU */

.no-webkit-scrolling {
  -webkit-overflow-scrolling: auto;
}

.webkit-scrolling {
  -webkit-overflow-scrolling: touch;
}

#menu {
  background-color: @menu;
  position: absolute;
  width: 260px;
  height: 100%;
  overflow: auto;
  #menu-content {
    li.account-link {
      padding-top: 8px;
      height: @page-header-height;
    }
    a, span {
      font-size: @font-small-size;
      .font-bold;
    }
    a.feature-link, a.lists-link {
      font-size: 1.17em;  // http://www.w3.org/TR/CSS2/sample.html
    }
    li.last-feature { // padding-bottom for li with last a.feature-link
      padding-bottom: @vertical-grid;
    }
    ul {
      margin-top: 4px;
    }
    a {
      color: #FEFFFF;
      padding-right: 30px;
      padding-left: 30px;
    }
    a.active, a.lists-link.active + a.hide-expand-link, a:active, a:active + a.hide-expand-link {
      background-color: white;
      color: black;
    }
    a {
      // http://getbootstrap.com/components/#dropdowns
      display: block;
    }
    .list {
      display: table;
      line-height: @vertical-grid-half;
      height: @vertical-grid;
      width: 100%;
      .list-link {
        display: table-cell;
        vertical-align: middle;
        padding-left: 40px;
      }
    }
    .lists-heading-container {
      display: table;
      .feature-link {
        display: table-cell;
        width: 90%;
      }
      a.hide-expand-link {
        vertical-align: middle;
        display: table-cell;
        width: 10%;
      }
    }
    .menu-last {
      padding-bottom: @vertical-grid-half;
    }
  }
}

// Override again with background color of the next element
// of the mobile menu
#feature-container-wrapper {
  position: relative;
  background-color: white;
  // NOTE: transition correspond with Snap.js drawer animation transition
  #feature-container {
    -webkit-transition: max-width .2s ease;
    -moz-transition: max-width .2s ease;
    -o-transition: max-width .2s ease;
    -ms-transition: max-width .2s ease;
    -transition: max-width .2s ease;
  }
}

/* # DATEPICKER */

li.datepicker-date {
  line-height: @vertical-grid-half;
}

#datepicker {
  height: @vertical-grid + 6;
  margin-top: -16px;
  overflow: hidden;
  div#scroller {
    // http://stackoverflow.com/a/18784257
    // css divide width 100% to 3 column
    width: 300%;
    height: inherit;
    display: flex;
    display: -webkit-flex;
    display: -ms-flexbox;
    justify-content: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    nav[role=navigation].slide {
      height: inherit;
      flex: 1;
      -webkit-flex: 1;
      -ms-flex: 1;
      ul {
        // http://stackoverflow.com/a/14103766
        // How to stretch html / css horizontal navigation items evenly and fully across a specified container
        width: 100%;
        height: inherit;
        li {
          height: inherit;
          vertical-align: middle;
        }
        li#datepicker-arrow-previous {
          text-align: left;
        }
        li#datepicker-arrow-next {
          text-align: right;
        }
        li.datepicker-date {
          min-width: 11.11%;
          text-align: center;
          a {
            font-size: @font-small-size;
            width: inherit;
            color: @highlighted-element;
            span {
              display: block;
              min-width: 29px;
            }
            span.day-date {
              display: block;
              margin: 0 auto;
              height: 28px;
              width: 28px;
              text-align: center;
              padding-top: 4px;
            }
          }
          a.date-active, a.date-active-today {
            font-weight: 700;
            span.day-date {
              color: white;
              border-radius: 50%; //http://css-tricks.com/almanac/properties/b/border-radius/
              background-color: @highlighted-element;
            }
          }
          a.date-past, a.date-active-past {
            color: @default-element;
          }
          a.date-active-past {
            span.day-date {
              color: white;
              border-radius: 50%; //http://css-tricks.com/almanac/properties/b/border-radius/
              background-color: @default-element;
            }
          }
          a.date-today {
            span.day-date {
              border-radius: 50%; //http://css-tricks.com/almanac/properties/b/border-radius/
              border: 1px solid @highlighted-element;
            }
          }
        }
      }
    }
  }
}

/* # PICK A DAY */
.pika-single {
  z-index: 9999;
  display: block;
  position: relative;
  color: #333;
  background: #fff;
  border: 1px solid #ccc;
  border-bottom-color: #bbb;
}

.pikaday-embedded .pika-single {
  z-index: auto;
  border: none;
}

/*
clear child float (pika-lendar), using the famous micro clearfix hack
http://nicolasgallagher.com/micro-clearfix-hack/
*/
.pika-single:before,
.pika-single:after {
  content: " ";
  display: table;
}
.pika-single:after { clear: both }
.pika-single { *zoom: 1 }

.pika-single.is-hidden {
  display: none;
}

.pika-single.is-bound {
  position: absolute;
  box-shadow: 0 5px 15px -5px rgba(0, 0, 0, .5);
}

.pika-lendar {
  float: left;
  width: 240px;
  margin: 8px;
}

.pikaday-embedded .pika-lendar {
  width: 100%;
  padding: 8px;
  margin: 0;
}

.pika-title {
  position: relative;
  text-align: center;
}
/* ... */

